--- a/Project 4.ipynb
+++ b/Project 4.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -124,7 +124,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "9fyYyxoSDCBi",
     "outputId": "5e523dc9-0445-44f4-d817-4ee1b8ca0d6c"
    },
@@ -164,7 +164,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "8oS41mFxDCBv",
     "outputId": "37d7fcac-1420-487e-993d-f439333d787f"
    },
@@ -222,7 +222,7 @@
    },
    "outputs": [],
    "source": [
-    "#data = pd.concat([train_data, test_data], axis=0)"
+    "data = pd.concat([train_data, test_data], axis=0)"
    ]
   },
   {
@@ -236,7 +236,7 @@
    },
    "outputs": [],
    "source": [
-    "#data.shape"
+    "data.shape"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "Iu1K1JHRDCCV",
     "outputId": "96caf65e-66f4-44fb-bee5-d52bf45ff9b3"
    },
@@ -464,7 +464,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "Cv1FhcTvDCDJ",
     "outputId": "1d7ee599-138b-4f6f-84d8-15e9b5675c7a"
    },
@@ -490,7 +490,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "bDWNs8vUDCDV",
     "outputId": "6eae520c-fd0d-4dcd-d2e6-255d4b05501b"
    },
@@ -535,21 +535,24 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "9YVYYy92DCDc",
     "outputId": "c9474c8d-9870-42db-b64c-56f3f52430c0",
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "############################\n",
-    "# عليك تعديل هذه الخانة قبل تسليم المشروع\n",
-    "# YOU HAVE TO EDIT THIS CELLL\n",
-    "############################\n",
+    "# confusion matrix 1\n",
     "\n",
-    "# confusion matrix 1 (using model1)\n",
+    "model1.fit(train_data, y)\n",
     "\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "mat = confusion_matrix(y, model1.predict(train_data))\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "sns.heatmap(mat.T, square=True, annot=True, fmt='d', cbar=False)\n",
+    "plt.xlabel('true label')\n",
+    "plt.ylabel('predicted label');"
    ]
   },
   {
@@ -558,21 +561,24 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "V4zc5Is_DCDk",
     "outputId": "4cd76e03-7c46-4e5f-89ae-f204cb7abfeb"
    },
    "outputs": [],
    "source": [
-    "############################\n",
-    "# عليك تعديل هذه الخانة قبل تسليم المشروع\n",
-    "# YOU HAVE TO EDIT THIS CELLL\n",
-    "############################\n",
     "\n",
-    "# confusion matrix 2 (using model 2)\n",
+    "# confusion matrix 2\n",
     "\n",
+    "model2.fit(train_data, y)\n",
     "\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "mat = confusion_matrix(y, model1.predict(train_data))\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "sns.heatmap(mat.T, square=True, annot=True, fmt='d', cbar=False)\n",
+    "plt.xlabel('true label')\n",
+    "plt.ylabel('predicted label');"
    ]
   },
   {
@@ -604,7 +610,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": false,
+    "collapsed": true,
     "id": "FsOYzx51DCDr",
     "outputId": "1ff57ff3-5532-4ab1-f03f-ac82c78d91d6"
    },
@@ -708,23 +714,23 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
