--- a/Project 4.ipynb
+++ b/Project 4.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "SKa4jD17DCBH"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "\n",
@@ -14,10 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "urXwAXLHDCBK"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "أهلاً بكم في المشروع الرابع. في هذ المشروع، سنتعمق في أساسيات بناء النماذج ولفعل ذلك سنقوم باستخدام بيانات الأعداد لتصنيف الأعداد من 0 إلى 9 بناء على الصور فقط! سنقوم في هذا المشروع بالعمل على بيانات كاقل التالية: "
@@ -25,20 +19,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "-uATmuEqDCBL"
-   },
+   "metadata": {},
    "source": [
     "- https://www.kaggle.com/c/digit-recognizer"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "XDfL3JdFDCBN"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "ملاحظة: عليك تعديل الخانات التي يوجد فيها الكود أدناه قبل تسليم المشروع. جميع الخانات الأخرى يجب ان تبقى كما هي بدون أي \n",
@@ -54,13 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "eUgrOzD_DCBO"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -72,10 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "M0gFSaRLDCBX"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "\n",
@@ -84,10 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "kYH85pW_DCBY"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "سنقوم أولاً بقراءة البيانات. كما ذكرنا، البيانات عبارة عن صور 28 x 28 بكسل. بالتالي نتوقع أن نرى 28 * 28 = 784 عمود. كل عمود يحوي على قيمة البكسل."
@@ -96,12 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "ID0gLjLqDCBa"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data = pd.read_csv('digit-recognizer/train.csv')"
@@ -109,10 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "sC8apwOFDCBf"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "لنر كيف تبدو الأعمدة:"
@@ -121,13 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "9fyYyxoSDCBi",
-    "outputId": "5e523dc9-0445-44f4-d817-4ee1b8ca0d6c"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data.columns"
@@ -135,10 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "F6Xty-z3DCBp"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "وهنا نقوم بذات الأمر مع بيانات الاختبار:"
@@ -147,12 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "dUchqVsnDCBr"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_data = pd.read_csv('digit-recognizer/test.csv')"
@@ -161,13 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "8oS41mFxDCBv",
-    "outputId": "37d7fcac-1420-487e-993d-f439333d787f"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_data.columns"
@@ -175,10 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Qm8GNirODCB1"
-   },
+   "metadata": {},
    "source": [
     "سنقوم الآن بعزل المتغير الذي يحتوي على تصنيف العدد وذلك لاستخدامه لاحقاً في نمذجة البيانات:"
    ]
@@ -186,12 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "o3CYkc9kDCB3"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y = train_data['label']"
@@ -200,51 +141,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "KSKfKlWqDCB7"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data.drop(columns='label', inplace=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "NHSjJURhDCCB"
-   },
-   "outputs": [],
-   "source": [
-    "data = pd.concat([train_data, test_data], axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "Um27K4t9DCCF"
-   },
-   "outputs": [],
-   "source": [
-    "data.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "hlvnaXt4DCCN"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "لدينا 70000 مثال و 784 متغير تنبؤ. متغيرات التنبؤ هنا ليست سوى قيم البكسلات في صور الأرقام المكتوبة (28 pixel x 28 pixel). لاستعراض بعض الأمثلة سنقوم باستخدام الأمر التالي:"
@@ -253,12 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "rzNL2yPDDCCP"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def show_examples(data, y):\n",
@@ -274,13 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "Iu1K1JHRDCCV",
-    "outputId": "96caf65e-66f4-44fb-bee5-d52bf45ff9b3"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "show_examples(train_data, y)"
@@ -288,10 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "8XWEF8W_DCCb"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "\n",
@@ -300,10 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "zTpvLDrnDCCc"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "في البداية، لايوجد أمامنا الكثير لنعمله في تجهيز البيانات سوى خطوة قد تكون مهمة لبعض النماذج: وهي تسوية البيانات. في تسوية البيانات، نقوم بكل بساطة بجعل كل الأعمدة بنفس المستوى بما يمكننا من المقارنة بين مختلف الأعمدة. هناك العديد من الطرق لتسوية البيانات ولكن سنقوم هنا باستخدام أسهل الطرق وهي بقسمة كل عمود على أكبر قيمة، وذلك لجعل البيانات بين 0 و 1. "
@@ -312,12 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "ta3qjyYFDCCe"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "############################\n",
@@ -326,18 +209,13 @@
     "############################\n",
     "\n",
     "def scale_data(data):\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    \n",
+    "    <CODE HERE>\n",
     "    return scaled"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7CXXx5DcDCCi"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "قبل تسوية البيانات، سنقوم بقراءة المتوسط والانحراف المعياري بمعزل حتى نستخدم هذه القيم في بيانات الاختبار الجديدة:"
@@ -346,12 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "lKfpFGlODCCj"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data_scaled=scale_data(train_data)"
@@ -359,10 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "AccIrErdDCCo"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "إذا عملت الخطوات بشكل صحيح، فسنرى الكثير من القيم المفقودة (NaN) ولكن في الحقيقة هذه ليست قيم مفقودة بل أرقام غير معرفة جراء قسمة مجموعة من الأصفار على صفر. لذلك، سنقوم باستبدال كل قيمة مفقودة (NaN) بالرقم 0."
@@ -371,12 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "c3silb5-DCCq"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "############################\n",
@@ -384,18 +249,13 @@
     "# YOU HAVE TO EDIT THIS CELLL\n",
     "############################\n",
     "\n",
-    "# YOUR CODE HERE"
+    "<CODE HERE>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "A01OrREaDCC2"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "assert np.max(np.max(train_data_scaled)) == 1., 'You got something wrong!'"
@@ -403,10 +263,55 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "pAa5uBOVDCC6"
-   },
+   "metadata": {},
+   "source": [
+    "سنقوم برسم البيانات قبل التسوية و بعدها لنلاحظ الفرق بينها، أدناه رسم البيانات قبل التسوية"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# سنستخدم المتغير train_data\n",
+    "y = pd.value_counts(train_data.values.ravel()).sort_index()\n",
+    "N = len(y)\n",
+    "x = range(N)\n",
+    "width =0.9\n",
+    "plt.figure(figsize=[20,5])\n",
+    "ax1=plt.subplot(1, 2,1)\n",
+    "ax1.bar(x, y, width, color=\"blue\")\n",
+    "plt.title('Pixel Value Frequency For Gray Scale Images')\n",
+    "plt.yscale('log')\n",
+    "plt.xlabel('Pixel Value (0-255)')\n",
+    "plt.ylabel('Frequency')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "قم برسم البيانات بعد التسوية و لاحظ الفرق بين الرسمين"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "############################\n",
+    "# عليك تعديل هذه الخانة قبل تسليم المشروع\n",
+    "# YOU HAVE TO EDIT THIS CELLL\n",
+    "############################\n",
+    "# استخدم المتغير train_data_scaled\n",
+    "<CODE HERE>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "\n",
@@ -415,10 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "PzAgsUEWDCC7"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "سنقوم الآن بنمذجة البيانات باستخدام عدة نماذج ونرى كيف يمكن أن نحسن من أداء النموذج. تحديدا، سنقوم بتدريب النموذج باستخدام البيانات الخام (training_data) ثم باستخدام البيانات بعد التسوية (training_data_scaled) ونقارن بين النتيجتين لنعرف إن كان للتسوية أي دور في تحسين أداء النموذج. لنبدأ باستخدام الانحدار اللوجستي. في الخانة أدناه، قم باستيراد كلاً من مكتبة الخوارزمية وأمر cross_val_score ثم استخدمهم في تدريب النموذج والتحقق من صحته."
@@ -428,10 +330,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "1i7rqe1_DCC8",
     "scrolled": true
    },
    "outputs": [],
@@ -443,16 +341,16 @@
     "\n",
     "# HINT: You should use `train_data` as your input\n",
     "\n",
-    "model1 = # YOUR CODE HERE\n",
-    "scores = # YOUR CODE HERE"
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "model1 = <CODE HERE>\n",
+    "scores = <CODE HERE>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "O73gh5ivDCDF"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "الآن سنقوم بطباعة متوسط الدقة:"
@@ -461,13 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "Cv1FhcTvDCDJ",
-    "outputId": "1d7ee599-138b-4f6f-84d8-15e9b5675c7a"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "scores.mean()"
@@ -475,10 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "LoQb-SpHDCDT"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "الآن سنكرر نفس العملية ولكن باستخدام نموذج آخر من اختيارك. ابحث عن نموذج تصنيفي (classification model) من ضمن مكتبات scikit-learn وقم باستخدامه في تصنيف الأعداد. ملاحظة: تستطيع استخدام train_data_scaled بدلاً من البيانات الخام وتقارن أداء النماذج المختلفة."
@@ -487,13 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "bDWNs8vUDCDV",
-    "outputId": "6eae520c-fd0d-4dcd-d2e6-255d4b05501b"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "############################\n",
@@ -501,18 +384,15 @@
     "# YOU HAVE TO EDIT THIS CELLL\n",
     "############################\n",
     "\n",
-    "model2 =  # YOUR CODE HERE\n",
-    "scores = # YOUR CODE HERE\n",
-    "\n",
+    "#model2 = None\n",
+    "model2 = <CODE HERE>\n",
+    "scores = <CODE HERE>\n",
     "scores.mean()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "L4IC5TqCDCDa"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "هل تلاحظ أي فرق في الدقة ؟"
@@ -520,10 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "oJMDkBODDCDb"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "لنقم بمقارنة مصفوفة الالتباس للحالتين ونرى هل يرتكب النموذجين ذات الأخطاء ؟"
@@ -533,11 +410,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "9YVYYy92DCDc",
-    "outputId": "c9474c8d-9870-42db-b64c-56f3f52430c0",
     "scrolled": false
    },
    "outputs": [],
@@ -558,13 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "V4zc5Is_DCDk",
-    "outputId": "4cd76e03-7c46-4e5f-89ae-f204cb7abfeb"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -583,10 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "cY9d7t4EDCDp"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "\n",
@@ -595,10 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "r5xykVagDCDq"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "قبل تسليم المشروع في موقع كاقل، سوف نستخدم النموذج الأفضل من النماذج أعلاه لمطابقته على جميع البيانات."
@@ -607,13 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "FsOYzx51DCDr",
-    "outputId": "1ff57ff3-5532-4ab1-f03f-ac82c78d91d6"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model1.fit(train_data, y) # training model on full data"
@@ -622,12 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "M91EnJR_DCDx"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_data['Label'] = model1.predict(test_data)"
@@ -636,12 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "dmpMQ0TUDCD0"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_data.index.name = 'ImageId'"
@@ -650,12 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "t_FX0sE1DCD5"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_data.index = test_data.index +1"
@@ -664,12 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "-Gri0dNaDCEB"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_data['Label'].to_csv('./digits_submission.csv', header=True)"
@@ -677,10 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "xXmMTRuhDCEG"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "والآن اذهب إلى موقع كاقل وقم برفع هذا الملف لترى أداء النموذج عن قرب:"
@@ -688,20 +519,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "TY7KVLFFDCEH"
-   },
+   "metadata": {},
    "source": [
     "- https://www.kaggle.com/c/digit-recognizer/submit"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "dnLMsLvwDCEM"
-   },
+   "metadata": {},
    "source": [
     "<div style=\"direction:rtl; text-align:right\">\n",
     "تسليم هذا المشروع على مرحلتين: الأولى هي في تسليم الملف إلى موقع كاقل ومن ثم مشاركة الرابط، والمرحلة الثانية هي باستكمال الخانات التي تحتاج إلى إكمال ومن ثم التأكد من سلامتها."
@@ -709,10 +534,6 @@
   }
  ],
  "metadata": {
-  "colab": {
-   "name": "Project 4.ipynb",
-   "provenance": []
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -728,9 +549,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
