--- a/Project 4.ipynb
+++ b/Project 4.ipynb
@@ -275,7 +275,7 @@
    "outputs": [],
    "source": [
     "# سنستخدم المتغير train_data\n",
-    "y = pd.value_counts(train_data.values.ravel()).sort_index()\n",
+    "y1 = pd.value_counts(train_data.values.ravel()).sort_index()\n",
     "N = len(y)\n",
     "x = range(N)\n",
     "width =0.9\n",
@@ -549,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
