Fixing variable name

--- a/Project 4.ipynb
+++ b/Project 4.ipynb
@@ -276,12 +276,12 @@
    "source": [
     "# سنستخدم المتغير train_data\n",
     "y1 = pd.value_counts(train_data.values.ravel()).sort_index()\n",
-    "N = len(y)\n",
+    "N = len(y1)\n",
     "x = range(N)\n",
     "width =0.9\n",
     "plt.figure(figsize=[20,5])\n",
     "ax1=plt.subplot(1, 2,1)\n",
-    "ax1.bar(x, y, width, color=\"blue\")\n",
+    "ax1.bar(x, y1, width, color=\"blue\")\n",
     "plt.title('Pixel Value Frequency For Gray Scale Images')\n",
     "plt.yscale('log')\n",
     "plt.xlabel('Pixel Value (0-255)')\n",
