--- a/Project 4.ipynb
+++ b/Project 4.ipynb
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_scaled=scale_data(train_data)"
+    "train_data_scaled = scale_data(train_data)"
    ]
   },
   {
@@ -276,12 +276,11 @@
    "source": [
     "# سنستخدم المتغير train_data\n",
     "y1 = pd.value_counts(train_data.values.ravel()).sort_index()\n",
-    "N = len(y)\n",
-    "x = range(N)\n",
-    "width =0.9\n",
+    "x1 = y1.index\n",
+    "width = 0.9\n",
     "plt.figure(figsize=[20,5])\n",
-    "ax1=plt.subplot(1, 2,1)\n",
-    "ax1.bar(x, y, width, color=\"blue\")\n",
+    "ax1 = plt.subplot(1, 2, 1)\n",
+    "ax1.bar(x1, y1, width, color=\"blue\")\n",
     "plt.title('Pixel Value Frequency For Gray Scale Images')\n",
     "plt.yscale('log')\n",
     "plt.xlabel('Pixel Value (0-255)')\n",
@@ -292,7 +291,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "قم برسم البيانات بعد التسوية و لاحظ الفرق بين الرسمين"
+    "قم برسم البيانات بعد التسوية لنلاحظ الفرق بين البيانات قبل وبعد التسوية، استخدم مقاسًا مناسبًا لقيمة عرض العمود\n",
+    "\n",
+    "(width)\n",
+    "\n",
+    "بحيث تكون القيم ما بين 0.01 إلى 0.0001، جربها واختر عرضًا مناسبًا\n",
+    "\n",
+    "ولا تنسى تغيير عنوان الرسم البياني ليكون\n",
+    "\n",
+    "Pixel Value Frequency For Gray Scale Images After Scalling\n",
+    "\n",
+    "ولاحظ أن قيم المحور السيني ستتراوح ما بين 0 إلى 1 وعليه سنقوم بتغيير عنوان المحور السيني ليكون\n",
+    "\n",
+    "Pixel Value (0-1)"
    ]
   },
   {
